# figsplit

./: README.md  pyproject.toml
figsplit/: split.py
figsplit/core/: figsplit_wrapper.py
src/: split.py
src/core/: figsplit_wrapper.py
tests/: test_figsplit.py
